...
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fragment_movie_details_date_txv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:textColor="@android:color/white" />

                <TextView
...
